plex/deployment.yaml
# plex/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: plex
  namespace: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    spec:
      securityContext:
        runAsNonRoot: false
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 1000
      containers:
        - name: plex
          image: docker.io/plexinc/pms-docker
          resources:
            requests:
              gpu.intel.com/i915: 1
              cpu: 500m
              memory: 2000Mi
            limits:
              gpu.intel.com/i915: 1
              memory: 5000Mi
          ports:
            - containerPort: 32400
              name: http
            - containerPort: 32469
              name: dlna-tcp
              protocol: TCP
            - containerPort: 1900
              name: dlna-udp
              protocol: UDP
            - containerPort: 3005
              name: plex-companion
              protocol: TCP  
            - containerPort: 5353
              name: discovery-udp
              protocol: UDP  
            - containerPort: 8324
              name: plex-roku
              protocol: TCP  
            - containerPort: 32410
              name: gdm-32410
              protocol: UDP
            - containerPort: 32412
              name: gdm-32412
              protocol: UDP
            - containerPort: 32413
              name: gdm-32413
              protocol: UDP
            - containerPort: 32414
              name: gdm-32414              
          volumeMounts:
            - name: config
              mountPath: /config
            - name: nas-movies
              mountPath: /media/movies
            - name: nas-series
              mountPath: /media/series
            - name: nas-videos
              mountPath: /media/videos
            - name: nas-photos
              mountPath: /media/photos
      volumes:
        - name: config
          nfs:
            server: 192.168.50.43
            path: /mnt/k3s_share/plex
        - name: nas-movies
          nfs:
            server: 192.168.50.40
            path: /volume1/movies
        - name: nas-series
          nfs:
            server: 192.168.50.40
            path: /volume1/series
        - name: nas-videos
          nfs:
            server: 192.168.50.40
            path: /volume1/videos
        - name: nas-photos
          nfs:
            server: 192.168.50.40
            path: /volume1/photo
