plex/svc.yaml
# plex/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: plex
  annotations:
    io.cilium/lb-ipam-ips: 192.168.50.43
spec:
  selector:
    app: plex
  type: LoadBalancer
  ports:
    - port: 32400               # < port to open on the outside on the server
      targetPort: 32400         # < targetport. port on the pod to passthrough
      name: pms-web             # < reference name for the port in the deployment yaml
      protocol: TCP
    - port: 3005
      targetPort: 3005
      name: plex-companion
    - port: 8324
      name: plex-roku
      targetPort: 8324  
      protocol: TCP  
    - port: 32469
      targetPort: 32469
      name: dlna-tcp
      protocol: TCP  
    - port: 1900                # < port to open on the outside on the server
      targetPort: 1900          # < targetport. port on the pod to passthrough
      name: dlna-udp            # < reference name for the port in the deployment yaml
      protocol: UDP
    - port: 5353
      targetPort: 5353
      name: discovery-udp
      protocol: UDP
    - port: 32410
      targetPort: 32410
      name: gdm-32410
      protocol: UDP
    - port: 32412
      targetPort: 32412
      name: gdm-32412
      protocol: UDP
    - port: 32413
      targetPort: 32413
      name: gdm-32413
      protocol: UDP
    - port: 32414
      targetPort: 32414
      name: gdm-32414
      protocol: UDP
